# ssh-sentinel-rs

./: .gitignore  Cargo.toml  README.md  justfile  open-api.json
.sqlx/: query-37666c718f18c73f87f18e81b612ed11fb07d03d9f304586197259be28ece371.json  query-55519dae0b5658bb9bd026f736d212c9a2b6412b0a3a918427f29a7994e22135.json  query-7bfba334cdefe12db4b355e7b10bf65dedc608d35da248c4a134a4913f9ac0ce.json  query-9d21cf36a47189929d3623aaf9db2fe6087301fa2980bdc48dc1e35b33233f1e.json  query-ae2ab436c9517dfb0e8d48753f120581b33872130004deca277c802d51d29cef.json
migrations/: 20231115180907_Create_initial_tables.sql  20231125201031_Add_user_type.sql  20231125202419_Add_config_table.sql
src/: main.rs
src/auth/: mod.rs
src/crypto/: mod.rs
src/endpoints/: mod.rs
src/model/: mod.rs  request.rs
